[tool.poetry]
name = "pktools"
version = "0.1.6"
description = ""
authors = ["katmai <katmai.mobil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord-webhook = "^0.11.0"
dbus-python = "^1.2.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
